--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ host = "localhost"
 db = "stefanssupershopuserdb"
 user = "root"
 pass = "root"
+
+
+Host = 'smtp.ethereal.email'
+SMTPAuth = true
+Username = 'kaleigh64@ethereal.email'
+Password = '9hmxuA7NjwknFkUHCU'
+SMTPSecure = 'tls'
+Port = 587
