--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "delight-im/auth": "^8.3"
     },
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
